external/esprima/test_fixtures/es2017/async/invalid-await/invalid-await-property.js
async f() { x = { async await(){} } }
